--- a/app/src/main/res/layout/activity_add_to_favorite.xml
+++ b/app/src/main/res/layout/activity_add_to_favorite.xml
@@ -30,6 +30,16 @@
                     android:contentDescription="@string/content_desc_user_avatar"
                     android:scaleType="centerCrop" />
 
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/fav_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/toolbar_bg"
+                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
                 <TextView
                     android:id="@+id/favorite_header_name"
                     android:layout_width="wrap_content"
