--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.openclassrooms.entrevoisins.ScrollingActivity">
+    tools:context="com.openclassrooms.entrevoisins.ui.neighbour_list.ScrollingActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
